--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
 
         <!-- ========================= main start ========================= -->
-        <main class="main-06">
+        <main style="background-color: black;" class="main-06">
             <!-- header start  -->
             <div class="header header-06">
                 <div class="container">
