--- a/index.html
+++ b/index.html
@@ -56,9 +56,23 @@
                                 <!-- countdown end  -->
                             </div>
                             <div class="col-xl-5 col-lg-5">
-                                <!-- desc strat  -->
-                                <p class="wow fadeInLeft" data-wow-delay=".4s">Leave your mark in the digital world with AdParcel; every parcel is an opportunity for your business to grow and your legacy to live on!</p>
-                                <!-- desc end  -->
+                              <!-- Açıklama ve linkler başlangıç -->
+<p class="wow fadeInLeft" data-wow-delay=".4s">
+    Leave your mark in the digital world with AdParcel; every parcel is an opportunity for your business to grow and your legacy to live on!
+</p>
+
+<p style="margin-top: 10px;">
+    <a href="https://www.linkedin.com/posts/ct-ss_adparcel-adrevolution-endlessreach-activity-7308439873810583552-bNGd?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAADCr_oMB64PeS12X-Zj8p9wN7fg5EkqdBVQ" style="color: #00bf63; font-weight: 800; text-decoration: none;">
+        What is Ad<span style="color: white;">Parcel</span>?
+    </a>
+</p>
+
+<p>
+    <a href="https://adparcel.printify.me" style="color: #00bf63; font-weight: 800; text-decoration: none;">
+        Support Us
+    </a>
+</p>
+<!-- Açıklama ve linkler bitiş -->
                             </div>
                         </div>
                     </div>
