--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </p>
 
 <p style="margin-top: 10px;">
-    <a href="https://www.linkedin.com/posts/ct-ss_adparcel-adrevolution-endlessreach-activity-7308439873810583552-bNGd?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAADCr_oMB64PeS12X-Zj8p9wN7fg5EkqdBVQ" style="color: #00bf63; font-weight: 800; text-decoration: none;" target="_blank" rel="noopener noreferrer">
+    <a href="https://youtu.be/rPHPXE4jCHU" style="color: #00bf63; font-weight: 800; text-decoration: none;" target="_blank" rel="noopener noreferrer">
         What is Ad<span style="color: white;">Parcel</span>?
     </a>
 </p>
